# thinking-with-types-answers

./: LICENSE  README.md  cabal.project  flake.nix  hie.yaml  thinking-with-types-answers.cabal
.github/workflows/: CI.yaml
app/: Main.hs
src/: Chapter_1.lhs  Chapter_10.hs  Chapter_11.hs  Chapter_12.hs  Chapter_13.hs  Chapter_14.hs  Chapter_2.lhs  Chapter_3.lhs  Chapter_4.hs  Chapter_5.hs  Chapter_6.hs  Chapter_7.hs  Chapter_8.hs  Chapter_9.hs
test/: Spec.hs
