cabal-version:   2.4
name:            thinking-with-types-answers
version:         0
license:         BSD-3-Clause
build-type:      Simple
license-file:    LICENSE
author:          josemarialanda
maintainer:      josemarialanda <josemaria.landa@gmail.com>
copyright:       2022 josemarialanda
tested-with:     GHC ==8.6.3 || ==8.8.3 || ==8.10.5
extra-doc-files:
  CHANGELOG.md
  README.md

-- category:
-- description:     description
-- synopsis:        one-line synopsis
-- homepage:        https://github.com/FIXME/thinking-with-types-answers#readme
-- source-repository head
--   type:     git
--   location: git://github.com/FIXME/thinking-with-types-answers.git

common common-options
  build-depends:    base >=4.9 && <5
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wpartial-fields

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules: Chapter_1
                 , Chapter_2
                 , Chapter_3
                 , Chapter_4
                 , Chapter_5
                 , Chapter_6
                 , Chapter_7
                 , Chapter_8
                 , Chapter_9
                 , Chapter_10
                 , Chapter_11
                 , Chapter_12
                 , Chapter_13
                 , Chapter_14

  build-depends:
    , containers
    , mtl
    , aeson
    , aeson-pretty
    , bytestring
    , first-class-families
    , kan-extensions
    , text
    , vector
    , world-peace

executable thinking-with-types-answers-exe
  import:         common-options
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:  thinking-with-types-answers
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

test-suite thinking-with-types-answers-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:
    , hspec
    , HUnit
    , thinking-with-types-answers
    , QuickCheck

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

benchmark thinking-with-types-answers-bench
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is:        Main.hs
  build-depends:
    , criterion
    , thinking-with-types-answers

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
